fixed-gap-added-media-query-content

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,5 @@
 * {
-    background-color: white;
+    background-color: #919c96;
     font-family: 'Arial Narrow', Arial, sans-serif;
     color: #94aba0;
     margin: 0;
@@ -8,20 +8,44 @@
 
 /* next: work on having header content centered no matter what. Perhaps look into position and flow */
 
-.all {
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+header {
 
+    background-color: black !important;
+    /* background-image: linear-gradient(white, white, #bdecdb); */
 }
 
-img {
+.logo {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    top: 10px;
+    top: 0px;
     left: 350px;
-    
+}
+
+.minty {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    top: 0px;
+    left: 350px;
+}
+
+#aboutlink {
+    position:relative;
+    display: block;
+    font-size: 30px;
+    width: 200px;
+    height: fit-content;
+    background-color: black;
+    top: -260px;
+    left: -425px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: transparent;
+    color:#d4faa3;
+    text-decoration: underline;
+    transform: rotate(315deg);
+
 }
 
 h1 {
@@ -32,27 +56,48 @@ h1 {
     left: 60%;
     right: auto;
     font-family: monospace;
+    color: #d4faa3;
 }
 
 .topbar {
-    background-color: #bdecdb;
+    background-image: linear-gradient(to right, rgb(212, 250, 163) , #bdecdb);
     height: 60px;
-    width: 100%;
+    width: 575px;
     margin-top: -200px;
     margin-bottom: 200px;
+}
+
+.otherbar {
+    background-image: linear-gradient(to left, #d4faa3 , #bdecdb);
+    height: 60px;
+    width: 575px;
+    margin-top: -260px;
+    float: right;
+}
+
+.all {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    /* border: black 5px solid; */
+   /* padding-left: 200px;
+    padding-right: 200px;*/
+
 }
 
 .content {
    /* width: 45%;*/
    max-width: 500px;
     height: auto;
-   margin-left: 200px;
+ /* margin-left: 200px;*/
    /* margin-top: 220px; */
     display: block;
     /*padding: 50px;*/
+    /* border: red 5px solid;  */
+    padding-right: -200px;
 }
 
-.aboutbar {
+#aboutbar {
     background-color: #bdecdb;
     height: 40px;
     width: 200px;
@@ -61,28 +106,96 @@ h1 {
     margin-left: 40px;
 }
 
-.aboutbar p {
+#aboutbar p {
    background: transparent;
     text-align: center;
     font-size: large;
     font-weight: bolder;
+    color: white;
+    margin-top:8px;
+
+}
+
+.contactbar {
+    background-color: #bdecdb;
+    height: 40px;
+    width: 200px;
+    position: absolute;
+    margin-top: -20px;
+    margin-left: 40px;
+}
+
+.contactbar p {
+   background: transparent;
+    text-align: center;
+    font-size: large;
+    font-weight: bolder;
+    color: white;
+    margin-top:8px;
 
 }
 
 .about, .contact {
-    border: 2px solid #c8e7d4;
+    /* border: 2px solid #d4faa3; */
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
+    background-image: linear-gradient(white, white, #919c96);
+    line-height: 1.5;
 
+}
+
+.about p, .contact, ul, a {
+    background-color: transparent;
+}
+
+li {
+    background-color: transparent;
+    line-height: 3;
+    list-style-type: square;
+}
+
+span {
+    background-color: transparent;
+    font-weight: bolder;
+}
+
+
+
+.pup {
+    float: right;
+    border-radius: 360px;
 }
 
 .rightbox {
     max-width: 500px;
     height: auto;
     display: block;
-    margin-right: 200px;
+    padding-left: 20px;
+    /*margin-right: 200px;*/
+    /* border: blue 5px solid; */
+    
+    
 }
+
+.workbar {
+    background-color: #bdecdb;
+    height: 40px;
+    width: 200px;
+    position: absolute;
+    margin-top: -20px;
+    margin-left: 40px;
+}
+
+.workbar p {
+    background: transparent;
+     text-align: center;
+     font-size: large;
+     font-weight: bolder;
+     color: white;
+     margin-top:8px;
+ 
+ }
 
 .work {
     /*width: 40%;*/
@@ -90,7 +203,64 @@ h1 {
     height: 724px;
   /*  margin-right: 20px; */
   /*  margin-top: -848px; */
-    border: 2px solid #c8e7d4;
+    /* border: 2px solid #d4faa3; */
   /*  float: right;*/
     padding: 50px; 
+    background-image: linear-gradient(white, white, #919c96);
+}
+
+.work p {
+    background-color: transparent;
+}
+
+@media screen and (max-width:1020px) {
+    .rightbox {
+        max-width: 500px;
+        height: auto;
+        display: block;
+        padding-left: 0;
+        /*margin-right: 200px;*/
+        /* border: blue 5px solid; */
+        
+    }
+}
+
+@media screen and (max-width:1350px) {
+    .topbar {
+        background-image: linear-gradient(to right, rgb(212, 250, 163) , #bdecdb);
+        height: 60px;
+        width: 250px;
+        margin-top: -200px;
+        margin-bottom: 200px;
+    }
+
+    .otherbar {
+        background-image: linear-gradient(to left, #d4faa3 , #bdecdb);
+        height: 60px;
+        width: 250px;
+        margin-top: -260px;
+        float: right;
+    }
+    
+    
+}
+
+@media screen and (max-width:750px) {
+    .topbar {
+        background-image: linear-gradient(to right, rgb(212, 250, 163) , #bdecdb);
+        height: 60px;
+        width: 125px;
+        margin-top: -200px;
+        margin-bottom: 200px;
+    }
+
+    .otherbar {
+        background-image: linear-gradient(to left, #d4faa3 , #bdecdb);
+        height: 60px;
+        width: 125px;
+        margin-top: -260px;
+        float: right;
+    }
+    
+    
 }
